syntax = "proto3";

service DIDAWorkerService {
  rpc Status (WorkerStatusEmpty) returns (WorkerStatusReply);
  rpc ListServer (WorkerStatusEmpty) returns (ListServerWorkerReply);
  rpc SendOutputToPM (WorkerStatusEmpty) returns (ListServerWorkerReply); //TODO! Ignore the request and reply... need to change them!
}

message ListServerWorkerReply{
	string sereverDataToSTring = 1;
}

message WorkerStatusEmpty{}

message WorkerStatusReply{
	bool success = 1;
}